--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,10 +8,11 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 160; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 179; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
-    --first-color: hsl(var(--hue-color), 69%, 41%);
+    /* --first-color: hsl(var(--hue-color), 69%, 41%); */
+    --first-color: hsl(var(--hue-color), 69%, 37%);
     --first-color-second: hsl(var(--hue-color), 69%, 69%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
     --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
@@ -1328,7 +1329,7 @@ img {
 
     .home__title {
         font-size: var(--big-font-size);
-        width: 400px;
+        width: 440px;
     }
 
     .home__blob {
